--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-brand {
+  font-weight: 800;
+  font-family: 'Bangers', cursive;
+  font-size: 40px;
+  text-shadow: 1px 1px 1px red;
+}
+
+.jumbotron {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  margin-bottom: 0;
+  background-color: #fff;
+}
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+}
+
+.jumbotron p:last-child {
+  margin-bottom: 0;
+}
+
+.jumbotron h1 {
+  font-weight: 800;
+  font-family: 'Bangers', cursive;
+  font-size:3em;
+  color: yellow;
+  text-shadow: 5px 5px black;
+}
+
+.jumbotron p {
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+  font-size:1.5em;
+  text-shadow: 5px 5px 3px black;
+}
+
+.jumbotron .container {
+  max-width: 40rem;
+}
